# llm_scratch

./: .gitignore  README.md  colab_train.ipynb  pyproject.toml
config/: colab_t4.py  debug_mac.py  fineweb_125m.py  fineweb_50m.py  fineweb_80m.py  gpt_1b.py  gpt_1b_fast.py  gpt_200m.py  gpt_200m_16gb.py  gpt_500m_16gb.py  small_50m.py
scripts/: build_mix.py  download_sample.py  download_tinystories.py  prepare_data.py  prepare_txt_dir.py
src/llmscratch/: __init__.py  config.py  convert.py  data.py  device.py  model_mlx.py  model_torch.py  sample_mlx.py  sample_torch.py  schedule.py  tokenizer.py  train_mlx.py  train_torch.py
tests/: test_build_mix.py  test_config.py  test_data.py  test_device.py  test_documents.py  test_integration.py  test_model_mlx.py  test_model_torch.py  test_parity.py  test_sample.py  test_smoke_train.py
