[project]
name = "llmscratch"
version = "0.1.0"
description = "A ~200M LLM trained from scratch — MLX (local) + PyTorch (cloud), Llama-style decoder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "tiktoken>=0.7",
    "torch>=2.4",
    "tqdm>=4.66",
    "tensorboard>=2.16",
    # MLX is Apple-Silicon only; the marker makes `uv sync` skip it on the Linux/CUDA cloud box.
    "mlx>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
data = ["datasets>=2.14", "hf_transfer>=0.1"]  # hf_transfer: Rust-accelerated HF downloads

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmscratch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
